--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <!-- Header -->
   <nav class="relative bg-white shadow-md">
    <div class="flex items-center p-4">
-    <img alt="Logo of KD Clothing &amp; Shoes" class="w-8 h-8 mr-2" height="32" src="https://storage.googleapis.com/a1aa/image/CWNYh5N8SiKRABRdVPajp11yNYs2t0znkq8SoN8HWaNjcrBF.jpg" width="32"/>
+    <img alt="Logo of KD Clothing &amp; Shoes" class="w-8 h-8 mr-2" height="32" src="https://drive.google.com/file/d/1p7BJy-6VX51Jf4J1a_BnU3JOBjL6ToF4/view?usp=drivesdk" width="32"/>
     <h1 class="text-lg font-medium">
      KD Clothing &amp; Shoes
     </h1>
