--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
      </button>
      <ul class="absolute right-0 mt-2 w-48 bg-white shadow-lg rounded-md hidden" id="menu">
       <li>
-       <a class="block px-4 py-2 text-gray-600 hover:bg-gray-100" href="#">
+       <a class="block px-4 py-2 text-gray-600 hover:bg-gray-100" href="https://kdfashionhub.github.io/Home/">
         Home
        </a>
       </li>
