--- a/index.html
+++ b/index.html
@@ -8,19 +8,19 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"/>
   <script>
    document.addEventListener('DOMContentLoaded', function () {
-     const menuButton = document.getElementById('menu-button');
-     const menu = document.getElementById('menu');
-     menuButton.addEventListener('click', function () {
-       menu.classList.toggle('hidden');
-     });
-   });
+            const menuButton = document.getElementById('menu-button');
+            const menu = document.getElementById('menu');
+            menuButton.addEventListener('click', function () {
+                menu.classList.toggle('hidden');
+            });
+        });
   </script>
  </head>
  <body class="bg-gray-100">
   <!-- Header -->
   <nav class="relative bg-white shadow-md">
    <div class="flex items-center p-4">
-    <img alt="Logo of KD Clothing &amp; Shoes" class="w-8 h-8 mr-2" height="32" src="logo.jpg" width="32"/>
+    <img alt="Logo of KD Clothing &amp; Shoes" class="w-8 h-8 mr-2" height="32" src="logo.png" width="32"/>
     <h1 class="text-lg font-medium">
      KD Clothing &amp; Shoes
     </h1>
@@ -62,7 +62,7 @@
    <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4">
     <!-- Product 1 -->
     <div class="bg-white p-4 shadow-md rounded-lg">
-     <img alt="Men's T-shirt" class="w-full h-48 object-cover mb-4" height="300" src="https://storage.googleapis.com/a1aa/image/QT7lcZIGRXpDAt2T8WllE3LYuqoGMJbGPqa6h8IWR4nadrBF.jpg" width="300"/>
+     <img alt="Men's T-shirt in a solid color" class="w-full h-48 object-cover mb-4" height="300" src="https://storage.googleapis.com/a1aa/image/CAcHcQpPToZdDBdj64Ep3B9HOxbtUKeqHvDoMZeozYaB3uGUA.jpg" width="300"/>
      <h3 class="text-lg font-medium">
       Men's T-shirt
      </h3>
@@ -75,7 +75,7 @@
     </div>
     <!-- Product 2 -->
     <div class="bg-white p-4 shadow-md rounded-lg">
-     <img alt="Men's Polo Shirt" class="w-full h-48 object-cover mb-4" height="300" src="https://storage.googleapis.com/a1aa/image/kf6i6DlasQUfAUFaeaDboPfWeeGRvN435frFvIMg3r8uz6WDKA.jpg" width="300"/>
+     <img alt="Men's Polo Shirt in a striped pattern" class="w-full h-48 object-cover mb-4" height="300" src="https://storage.googleapis.com/a1aa/image/IFBplaLKsJoyItYUS1nQBt3hCf0H3nKm6HvmslfMk9bD3uGUA.jpg" width="300"/>
      <h3 class="text-lg font-medium">
       Men's Polo Shirt
      </h3>
@@ -88,7 +88,7 @@
     </div>
     <!-- Product 3 -->
     <div class="bg-white p-4 shadow-md rounded-lg">
-     <img alt="Men's Casual Shirt" class="w-full h-48 object-cover mb-4" height="300" src="https://storage.googleapis.com/a1aa/image/Ftq5CYk69g7yA9fAGirlVl73uygxwszpVjyfe8ZfU3cmW3aQB.jpg" width="300"/>
+     <img alt="Men's Casual Shirt with a checkered pattern" class="w-full h-48 object-cover mb-4" height="300" src="https://storage.googleapis.com/a1aa/image/aUgIvHlZxeV7HSFFsTEA6sZizM4v6Aj1WOfy7t9F4BGA3uGUA.jpg" width="300"/>
      <h3 class="text-lg font-medium">
       Men's Casual Shirt
      </h3>
@@ -101,7 +101,7 @@
     </div>
     <!-- Product 4 -->
     <div class="bg-white p-4 shadow-md rounded-lg">
-     <img alt="Men's Formal Shirt" class="w-full h-48 object-cover mb-4" height="300" src="https://storage.googleapis.com/a1aa/image/oxUtpnTvthZHA12NragbzgB5feBpfZ6kgpuzWW7uFPFQrbNoA.jpg" width="300"/>
+     <img alt="Men's Formal Shirt in a solid color" class="w-full h-48 object-cover mb-4" height="300" src="https://storage.googleapis.com/a1aa/image/H4SJWpCVBn5gJRBkLeculLmInFGzfYvef9EihcIPndzf321gC.jpg" width="300"/>
      <h3 class="text-lg font-medium">
       Men's Formal Shirt
      </h3>
@@ -112,7 +112,6 @@
       Buy Now
      </button>
     </div>
-    <!-- Add more products as needed -->
    </div>
   </div>
   <!-- Footer -->
