--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <!-- Header -->
   <nav class="relative bg-white shadow-md">
    <div class="flex items-center p-4">
-    <img alt="Logo of KD Clothing &amp; Shoes" class="w-8 h-8 mr-2" height="32" src="logo.png" width="32"/>
+    <img alt="Logo of KD Clothing &amp; Shoes" class="w-8 h-8 mr-2" height="32" src="logo.jpg" width="32"/>
     <h1 class="text-lg font-medium">
      KD Clothing &amp; Shoes
     </h1>
